--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -96,19 +96,7 @@
                 </div>
                 <div class="pay-amount">
                   <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
-                  <!--  -->
+                  <button class="modal-btn" data-type="pay">결제 내역</button>
                 </div>
               </div>
               <!-- chart2 -->
@@ -137,36 +125,14 @@
                 <div class="na1">OOO시터</div>
                 <div class="price1">120,000원</div>
                 <div class="chart1">
-                  <a href="">채팅하기</a>
-                                    <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                  <!-- 모달 버튼 -->
+                  <button class="openChatBtn" data-sitter="sitter1">
+                    채팅
+                  </button>
                 </div>
                 <div class="view1">
-                  <a href="">상세보기</a>
-                                    <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                  <!-- 모달 버튼 -->
+                  <button class="modal-btn" data-type="view1">상세보기</button>
                 </div>
               </div>
               <div class="res2">
@@ -186,36 +152,14 @@
                 <div class="na2">OOO시터</div>
                 <div class="price2">25,000원</div>
                 <div class="chart2">
-                  <a href="">채팅하기</a>
-                                    <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                  <!-- 모달 버튼 -->
+                  <button class="openChatBtn" data-sitter="sitter2">
+                    채팅
+                  </button>
                 </div>
                 <div class="view2">
-                  <a href="">상세보기</a>
-                                    <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                  <!-- 모달 버튼 -->
+                  <button class="modal-btn" data-type="view2">상세보기</button>
                 </div>
               </div>
               <div class="allres">
@@ -284,20 +228,10 @@
                     <li>2025-03-14 이용</li>
                   </ul>
                   <div class="chat1">
-                    <a href="javascript:void(0)">채팅</a>
-                                      <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter3">
+                      채팅
+                    </button>
                   </div>
                 </div>
                 <div class="sit-name2">
@@ -315,20 +249,10 @@
                     <li>2025-04-19 이용</li>
                   </ul>
                   <div class="chat2">
-                    <a href="javascript:void(0)">채팅</a>
-                                      <!-- 모달 버튼 -->
-                  <button id="modalBtn">결제 내역</button>
-                  <!-- 모달 창 -->
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <span class="close" id="closeBtn">&times;</span>
-                      <p>모달 내용이 여기에 들어갑니다.</p>
-                      <p>
-                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
-                        수 있습니다.
-                      </p>
-                    </div>
-                  </div>
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter4">
+                      채팅
+                    </button>
                   </div>
                 </div>
                 <div class="res3">
@@ -336,6 +260,33 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <!-- 기본 모달 -->
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close" id="closeBtn">&times;</span>
+          <div id="modalContentBody">
+            <p>기본 모달 내용</p>
+          </div>
+        </div>
+      </div>
+      <!-- 채팅 모달 -->
+      <div id="chatModal" class="chat-modal">
+        <div class="chat-box">
+          <div class="chat-header">
+            <span id="chatWith">채팅</span>
+            <span id="closeChatBtn" class="close">&times;</span>
+          </div>
+          <div class="chat-messages" id="chatMessages"></div>
+          <div class="chat-input">
+            <input
+              type="text"
+              id="chatInput"
+              placeholder="메시지를 입력하세요"
+            />
+            <button id="sendBtn">전송</button>
           </div>
         </div>
       </div>
