--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -108,75 +108,243 @@
                   <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
                 </ul>
               </div>
-              <div class="res1">
-                <ul>
-                  <li>호텔링</li>
-                  <li>예약 확정</li>
-                </ul>
-                <div class="schedule1">
-                  <span
-                    class="material-symbols-outlined"
-                    style="font-size: 15px"
-                  >
-                    calendar_today
-                  </span>
-                  <span>2025-05-12 ~ 2025-05-15</span>
-                </div>
-                <div class="na1">OOO시터</div>
-                <div class="price1">120,000원</div>
-                <div class="chart1">
-                  <!-- 모달 버튼 -->
-                  <button class="openChatBtn" data-sitter="sitter1">
-                    채팅
-                  </button>
-                </div>
-                <div class="view1">
-                  <!-- 모달 버튼 -->
-                  <button class="modal-btn" data-type="view1">상세보기</button>
-                </div>
-              </div>
-              <div class="res2">
-                <ul>
-                  <li>산책</li>
-                  <li>예약 확정</li>
-                </ul>
-                <div class="schedule2">
-                  <span
-                    class="material-symbols-outlined"
-                    style="font-size: 15px"
-                  >
-                    calendar_today
-                  </span>
-                  <span>2025-05-12 ~ 2025-05-15</span>
-                </div>
-                <div class="na2">OOO시터</div>
-                <div class="price2">25,000원</div>
-                <div class="chart2">
-                  <!-- 모달 버튼 -->
-                  <button class="openChatBtn" data-sitter="sitter2">
-                    채팅
-                  </button>
-                </div>
-                <div class="view2">
-                  <!-- 모달 버튼 -->
-                  <button class="modal-btn" data-type="view2">상세보기</button>
-                </div>
-              </div>
-              <div class="allres">
-                <div class="left">
-                  <span class="material-symbols-outlined"> chevron_left </span>
-                </div>
-                <div class="number">
+              <div class="resev-page" data-page="1">
+                <div class="res1">
                   <ul>
-                    <li><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
+                    <li>호텔링</li>
+                    <li>예약 확정</li>
                   </ul>
+                  <div class="schedule1">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na1">OOO시터</div>
+                  <div class="price1">120,000원</div>
+                  <div class="chart1">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter1">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view1">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  </div>
                 </div>
-                <div class="right">
-                  <span class="material-symbols-outlined"> chevron_right </span>
+                <div class="res2">
+                  <ul>
+                    <li>산책</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule2">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na2">OOO시터</div>
+                  <div class="price2">25,000원</div>
+                  <div class="chart2">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter2">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view2">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  </div>
                 </div>
+              </div>
+              <div class="resev-page" data-page="2">
+                <div class="res1">
+                  <ul>
+                    <li>호텔링</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule1">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na1">OOO시터</div>
+                  <div class="price1">120,000원</div>
+                  <div class="chart1">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter1">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view1">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  </div>
+                </div>
+                <div class="res2">
+                  <ul>
+                    <li>산책</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule2">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na2">OOO시터</div>
+                  <div class="price2">25,000원</div>
+                  <div class="chart2">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter2">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view2">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  </div>
+                </div>
+              </div>
+              <div class="resev-page" data-page="3">
+                <div class="res1">
+                  <ul>
+                    <li>호텔링</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule1">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na1">OOO시터</div>
+                  <div class="price1">120,000원</div>
+                  <div class="chart1">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter1">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view1">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  </div>
+                </div>
+                <div class="res2">
+                  <ul>
+                    <li>산책</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule2">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na2">OOO시터</div>
+                  <div class="price2">25,000원</div>
+                  <div class="chart2">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter2">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view2">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  </div>
+                </div>
+              </div>
+              <div class="resev-page" data-page="4">
+                <div class="res1">
+                  <ul>
+                    <li>호텔링</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule1">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na1">OOO시터</div>
+                  <div class="price1">120,000원</div>
+                  <div class="chart1">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter1">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view1">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  </div>
+                </div>
+                <div class="res2">
+                  <ul>
+                    <li>산책</li>
+                    <li>예약 확정</li>
+                  </ul>
+                  <div class="schedule2">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: 15px"
+                    >
+                      calendar_today
+                    </span>
+                    <span>2025-05-12 ~ 2025-05-15</span>
+                  </div>
+                  <div class="na2">OOO시터</div>
+                  <div class="price2">25,000원</div>
+                  <div class="chart2">
+                    <!-- 모달 버튼 -->
+                    <button class="openChatBtn" data-sitter="sitter2">
+                      채팅
+                    </button>
+                  </div>
+                  <div class="view2">
+                    <!-- 모달 버튼 -->
+                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  </div>
+                </div>
+              </div>
+              <!-- pagenation part -->
+              <div class="allres">
+                <button class="left material-symbols-outlined">
+                  chevron_left
+                </button>
+                <ul class="number">
+                  <li><button class="page-btn">1</button></li>
+                  <li><button class="page-btn">2</button></li>
+                  <li><button class="page-btn">3</button></li>
+                </ul>
+                <button class="right material-symbols-outlined">
+                  chevron_right
+                </button>
               </div>
             </div>
             <!-- chart3 -->
